--- a/css/estilo.css
+++ b/css/estilo.css
@@ -211,3 +211,15 @@ fieldset legend {
     background-color: white;
     cursor: pointer;
 }
+.success-message {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    font-size: 16px;
+}
