--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,199 +1,203 @@
 body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
 }
+
 header {
-    background-color: rgb(59, 1, 59);
-    color: white;
-    padding: 10px;
-    width: 100%;
-    text-align: center;
-
+  background-color: rgb(59, 1, 59);
+  color: white;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  box-sizing: border-box;
 }
+
 .products, .cart {
-    width: 90%;
-    max-width: 800px;
-    margin: 20px 0;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.855);
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+  width: 90%;
+  max-width: 800px;
+  margin: 20px 0;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.855);
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
-.products .product {
-    margin-bottom: 20px;
-    text-align: left;
+.product {
+  margin-bottom: 20px;
+  text-align: left;
 }
 
 .product h2 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-    text-align: left;
+  font-size: 1.2em;
+  margin-bottom: 10px;
+  text-align: left;
 }
 
 .product p {
-    font-size: 1em;
-    color: #333;
+  font-size: 1em;
+  color: #333;
 }
 
 button {
-    background-color: purple;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 17px;
-    cursor: pointer;
+  background-color: purple;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 17px;
+  cursor: pointer;
 }
 
 button:hover {
-    background-color: green;
+  background-color: green;
 }
 
 .cart h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .cart ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .cart ul li {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
 }
 
 .cart p {
-    font-weight: bold;
-    text-align: center;
+  font-weight: bold;
+  text-align: center;
 }
 
 label {
-    display: block;
-    margin: 10px 0;
-    font-weight: bold; /* Define o texto como negrito */
+  display: block;
+  margin: 10px 0;
+  font-weight: bold;
 }
 
 input[type="radio"] {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 #delivery-info {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 #delivery-info label {
-    margin: 5px 0;
+  margin: 5px 0;
 }
 
 #delivery-info input[type="text"] {
-    color: purple;
-    font-size: 16px;
-    width: 90%;
-    padding: 8px;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  color: purple;
+  font-size: 16px;
+  width: 90%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 fieldset {
-    margin-top: 10px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 5px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 fieldset legend {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .additional {
-    margin-right: 10px;
-    text-align: left;
-}
-.logo{
-    border-radius: 50%;
-    border-style: solid;
-    border-color: white;
-    text-align: center;
+  margin-right: 10px;
+  text-align: left;
 }
 
-.copyright{
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-size: 13px;
-    color: rgb(3, 3, 87);
+.logo {
+  border-radius: 50%;
+  border-style: solid;
+  border-color: white;
+  text-align: center;
 }
-.produto{
-    border-style: solid;
-    border-color: purple;
-    border-radius: 26px;
-    text-align: center;
-}
-.atenção{
-    border-radius: 50%;
-    border-style: solid;
-    border-color: red;
 
+.copyright {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 13px;
+  color: rgb(3, 3, 87);
 }
+
+.produto {
+  border-style: solid;
+  border-color: purple;
+  border-radius: 26px;
+  text-align: center;
+}
+
+.atenção {
+  border-radius: 50%;
+  border-style: solid;
+  border-color: red;
+}
+
 .Pagamento {
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 21px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 21px;
 }
-/* Estilizar o contêiner do select */
+
 .custom-select {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    color: #444;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    appearance: none; /* Remove as setas padrão */
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    position: relative;
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  color: #444;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  position: relative;
 }
 
-/* Adicionar uma seta personalizada */
 .custom-select::after {
-    content: '▼';
-    font-size: 12px;
-    color: #888;
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
+  content: '▼';
+  font-size: 12px;
+  color: #888;
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
 }
 
-/* Estilizar as opções do select */
 .custom-select option {
-    padding: 10px;
-    background-color: #fff;
-    color: #444;
+  padding: 10px;
+  background-color: #fff;
+  color: #444;
 }
-/* Estilos para a barra de pesquisa */
+
 #searchBar {
-    width: 80%;
-    max-width: 400px;
-    padding: 10px;
-    margin: 20px auto;
-    display: block;
-    border: 1px solid purple;
-    border-radius: 17px;
-    font-size: 16px;
-    color: purple;
-    font-weight: bold; /* Define o texto como negrito */
-    padding: 10px;
+  width: 80%;
+  max-width: 400px;
+  padding: 10px;
+  margin: 20px auto;
+  display: block;
+  border: 1px solid purple;
+  border-radius: 17px;
+  font-size: 16px;
+  color: purple;
+  font-weight: bold;
 }
+
 
 /* ESTILOS PARA O FOOTER */
 .atec{
